# dynamodb-hobbes

./: README.md
cdk/lib/: dynamodb-stack.ts
srvls/create/: Cargo.toml
srvls/create/src/: main.rs
srvls/read/: Cargo.toml
srvls/read/src/: main.rs
