[package]
name = "dynamodb-create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.5.2"
aws-sdk-dynamodb = "0.5.2"
aws-sdk-s3 = "0.5.2"
lambda_http = "0.4.1"
#lambda_runtime = "0.4.1"
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["http1", "client", "server", "stream", "runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
bytes = "1.0"
http = "0.2"
async-stream = "0.3"
tracing = { version = "0.1", features = ["log"] }
tower = { version = "0.4", features = ["util"] }
tokio-stream = "0.1.2"
tracing-subscriber = "0.3.6"
trace = "0.1.6"

#
[[bin]]
name = "bootstrap"
path = "src/main.rs"
